<resources>
    <string name="tile">Please select a number of digits. The number of digits that I keep in my mind and the number of digits you choose will be the same. Also, never forget that you have 10 rights</string>
    <string name="two_digit">Two Digit Number</string>
    <string name="three_digit">Three Digit Number</string>
    <string name="four_digit">Four Digit Number</string>
    <string name="comfirm">Start</string>
</resources>